--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="js/index.js"></script>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
